tests/golden/err-import-parent-file/expected_error.txt
error: フォルダの外のファイルは import できません
 --> ./sub/util.clum:1:2
  |
1 | @../page
  |  ^^^^^^^ ファイルの住所は同じフォルダの中でだけ通用します。よそのディレクトリからは窓口の公開名を import します
